fix video visibility

--- a/src/stylus/sections.styl
+++ b/src/stylus/sections.styl
@@ -41,7 +41,6 @@
   img, video
     width: 100%
     height: auto
-    display: block
 
 .section.section--projects
   padding-top: 0
